# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  meson.build
src/: chip8.c  chip8.h
src/emulator/: chip8.c  chip8.h  main.c
